<resources>
    <string name="app_name">Melhor Preço Garanhuns</string>
    <string name="vazio"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="lista_compras">Minha lista de compras</string>
    <string name="locais_compras">Enconte locais de compras</string>
    <string name="buscar_produtos">Buscar por produto ou marca</string>
    <string name="leitor_codigo">Leitor de código de barras</string>
    <string name="melhores_precos">MELHORES PREÇOS</string>
    <string name="buscar_produtos_ac">BUSCAR PRODUTOS</string>
    <string name="buscar_por_produto">Buscar por produto</string>
    <string name="limpar">Limpar</string>
    <string name="menor_pre">Menor preço</string>
    <string name="maior_pre">Maior preço</string>
    <string name="ordem_alfab">A - Z</string>
    <string name="detalhes_do_produto">Detalhes do Produto</string>
    <string name="inf">TODO</string>
    <string name="item_selecionado">ITEM SELECIONADO</string>

    <string name="desc">Desc.:</string>
    <string name="pre_o">Preço:</string>
    <string name="estabelecimento">Est.:</string>
    <string name="endereco">End.:</string>
    <string name="bairro">Bairro:</string>
    <string name="cidade">Cidade:</string>
    <string name="cod">Cod.:</string>
    <string name="rs">R$</string>
    <string name="logomp">LogoMP</string>
</resources>
