<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.ifpe.makeit.melhorprecogaranhuns.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:id="@+id/icon_imagem"
        android:layout_width="152dp"
        android:layout_height="140dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:elevation="1dp"
        android:src="@mipmap/ic_launcher_icon_mp"
        app:layout_constraintBottom_toTopOf="@+id/button_scannear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logomp" />

    <Button
        android:id="@+id/button_scannear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_button"
        android:drawableStart="@mipmap/ic_scannear"
        android:padding="5dp"
        android:text="@string/leitor_codigo"
        android:textColor="@color/branco"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_imagem"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_button"
        android:drawableStart="@mipmap/ic_buscar"
        android:padding="5dp"
        android:text="@string/buscar_produtos"
        android:textColor="@color/branco"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_listar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_scannear" />

    <Button
        android:id="@+id/button_listar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_button"
        android:drawableStart="@mipmap/ic_listar"
        android:padding="5dp"
        android:text="@string/lista_compras"
        android:textColor="@color/branco"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_mapear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_buscar" />

    <Button
        android:id="@+id/button_mapear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_button"
        android:drawableStart="@mipmap/ic_mapear"
        android:padding="5dp"
        android:text="@string/locais_compras"
        android:textColor="@color/branco"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_listar" />

</android.support.constraint.ConstraintLayout>
